# eqnn

./: .gitignore  .pre-commit-config.yaml  README.md  buonaiuto.ipynb  make_plots.py  nohup.out  plots_to_show.ipynb  pyproject.toml  results_with_31_params.txt  results_with_34  results_with_6_params.txt  results_with_9_params.txt  run_experiments.sh  run_experiments_gmagnifico.sh  run_experiments_gmagnifico_last.sh  run_experiments_gmagnifico_next.sh  run_experiments_gmagnifico_next1.sh  run_experiments_gmagnifico_next2.sh  run_missing_experiments.sh  setup.cfg
old_results_with_MNIST/plots/: plot_results_full.py
results/: results_with_31_params.txt  results_with_48_params.txt
results/nwpu/: multirun.yaml  test_accuracies.txt
results_new/: all_results_new.txt  results_complete.txt
results_new/DATA.N=1280,DATA.dataset=eurosat,GENERAL.seed=1,QNN.non_equivariance=3,QNN.p_err=0,QNN.reps=1,TRAINING.epochs=60/: final_model.pt  loss_history.csv
results_new/DATA.N=1280,DATA.dataset=eurosat,GENERAL.seed=1,QNN.non_equivariance=3,QNN.p_err=0,QNN.reps=2,TRAINING.epochs=60/: final_model.pt  loss_history.csv
results_new/DATA.N=1280,DATA.dataset=eurosat,GENERAL.seed=1,QNN.non_equivariance=3,QNN.p_err=0,QNN.reps=3,TRAINING.epochs=60/: final_model.pt  loss_history.csv
results_new/DATA.N=1280,DATA.dataset=eurosat,GENERAL.seed=1,QNN.non_equivariance=4,QNN.p_err=0,QNN.reps=1,TRAINING.epochs=60/: final_model.pt  loss_history.csv
results_new/DATA.N=1280,DATA.dataset=eurosat,GENERAL.seed=1,QNN.non_equivariance=4,QNN.p_err=0,QNN.reps=2,TRAINING.epochs=60/: final_model.pt  loss_history.csv
results_new/DATA.N=1280,DATA.dataset=eurosat,GENERAL.seed=1,QNN.non_equivariance=4,QNN.p_err=0,QNN.reps=3,TRAINING.epochs=60/: final_model.pt  loss_history.csv
results_new/DATA.N=1280,DATA.dataset=eurosat,GENERAL.seed=2,QNN.non_equivariance=3,QNN.p_err=0,QNN.reps=1,TRAINING.epochs=60/: final_model.pt  loss_history.csv
results_new/DATA.N=1280,DATA.dataset=eurosat,GENERAL.seed=2,QNN.non_equivariance=3,QNN.p_err=0,QNN.reps=2,TRAINING.epochs=60/: final_model.pt  loss_history.csv
results_new/DATA.N=1280,DATA.dataset=eurosat,GENERAL.seed=2,QNN.non_equivariance=3,QNN.p_err=0,QNN.reps=3,TRAINING.epochs=60/: final_model.pt  loss_history.csv
results_new/DATA.N=1280,DATA.dataset=eurosat,GENERAL.seed=2,QNN.non_equivariance=4,QNN.p_err=0,QNN.reps=1,TRAINING.epochs=60/: final_model.pt  loss_history.csv
results_new/DATA.N=1280,DATA.dataset=eurosat,GENERAL.seed=2,QNN.non_equivariance=4,QNN.p_err=0,QNN.reps=2,TRAINING.epochs=60/: final_model.pt  loss_history.csv
results_new/DATA.N=1280,DATA.dataset=eurosat,GENERAL.seed=2,QNN.non_equivariance=4,QNN.p_err=0,QNN.reps=3,TRAINING.epochs=60/: final_model.pt  loss_history.csv
results_new/DATA.N=1280,DATA.dataset=eurosat,GENERAL.seed=3,QNN.non_equivariance=3,QNN.p_err=0,QNN.reps=2,TRAINING.epochs=60/: final_model.pt  loss_history.csv
results_with_01/: results_with_6_params.txt
results_with_MNIST/: multirun.yaml  summary_DONT_DELETE.txt  test_accuracies_160.txt  test_accuracies_40_80_160.txt
results_with_MNIST_01/: risultati_attesi.txt
results_with_MNIST_34/: plot.ipynb  plots_to_show.py  show_results.py  summary_DONT_DELETE.txt  summary_DONT_TOUCH.txt  test_accuracies.txt  test_accuracies_for_plot.txt
src/: main.py  mnist_loading.py  plot.py  qnn.py  test.py  train.py
tests/: test_equivariance.py
(+29267 files in other folders)
